--- a/README
+++ b/README
@@ -1,1 +1,7 @@
+Repositorio de documentación para la práctica 3 de Bases de Datos.
 
+Integrantes:
+
+ - Carlos Rodríguez Gómez-Carreño
+ - Alejandro Galán Moreno
+ - Pablo Carbayo
