--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Repositorio de documentación para la práctica 3 de Bases de Datos.
 
+Enunciado: Documentación/BD22-EspecificaciónPractica3.pdf
+
 Integrantes:
 
  - Carlos Rodríguez Gómez-Carreño
